--- a/guess-what-backend/package.json
+++ b/guess-what-backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.9",
     "uuid": "^11.0.3",
     "winston": "^3.17.0"
   },
