--- a/guess-what-backend/tsconfig.json
+++ b/guess-what-backend/tsconfig.json
@@ -33,7 +33,7 @@
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": [
-      "node_modules/@types",
+      "./node_modules/@types",
       "./src/types"
     ] /* Specify multiple folders that act like './node_modules/@types'. */,
     "types": [
@@ -113,6 +113,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types/**/*"],
   "files": ["src/types/express/index.d.ts"]
 }
