--- a/memora-web/package.json
+++ b/memora-web/package.json
@@ -14,10 +14,11 @@
     "@tailwindcss/vite": "^4.0.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
+    "motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
