--- a/memora-web/package.json
+++ b/memora-web/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/vite": "^4.0.3",
     "@types/react-router-dom": "^5.3.3",
@@ -19,7 +20,9 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.1.5"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
