--- a/memora-web/package.json
+++ b/memora-web/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/vite": "^4.1.4",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
+    "classnames": "^2.5.1",
+    "lucide-react": "^0.522.0",
     "motion": "^12.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
