--- a/memora-web/package.json
+++ b/memora-web/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.522.0",
     "motion": "^12.4.7",
     "react": "^18.3.1",
@@ -24,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "recharts": "^3.1.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
